# ai-iq

./: .gitignore  ARCHITECTURE.md  CAPABILITY_ACCESS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PLUGIN.md  CONTRIBUTING.md  DRIFT_DETECTION.md  INSTALLATION.md  LICENSE  PHASE3_QUICK_REF.md  README.md  ai_iq.py  logo.html  marketplace.json  memory-tool.py  migrate_tiers.py  optional-requirements.txt  patterns.json  pyproject.toml  requirements.txt  setup.sh  test_upgrades.py
.claude-plugin/: README.md  hooks.json  marketplace.json  plugin.json
.claude-plugin/skills/memory/: SKILL.md
.github/workflows/: test.yml
benchmarks/: README.md  __init__.py  eval_suite.py  fixtures.py  run.py  run_longmemeval.py
demo/: .created-summary.txt  DEMO_STORYBOARD.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RECORDING_CHECKLIST.md  START_HERE.md  demo-script.sh  demo.cast  record.sh
docs/: COMMIT_CHECKLIST.txt  DEPLOY.md  DEPLOYMENT.md  DEPLOY_GITHUB_PAGES.md  FEEDBACK_QUICKSTART.md  FEEDBACK_SYSTEM.md  FOCUS_COMMAND.md  README.md  REFERENCE.md  REFLEXION.md  SITE_BUILD_SUMMARY.md  SITE_SUMMARY.md  api.html  cli.html  index.html  plugins.html  quickstart.html  reference.html  style.css
examples/: README.md  api_demo.py  basic_usage.py  chatbot_with_memory.py
hooks/: README.md  hooks.json  posttool-capture.sh  quality-gate.py  search-feedback.mjs  session-logger.mjs  test-hook-error.json  test-hook-input.json  test-hook-pattern.json  tool-capture.mjs
hooks/claude-code/: CLAUDE.md.example  PACKAGE_INFO.md  PLUGIN_README.md  QUICK_START.md  README.md  daily-maintenance.sh  error-hook.sh  install.sh  session-hook.sh  session-start-hook.sh  settings.json.example  test-hooks.sh
hooks/post-task/: reflect-hook.sh
memory_tool/: __init__.py  access_control.py  api.py  beliefs.py  beliefs_extended.py  circus_sync.py  cli.py  config.py  context_budget.py  core.py  corrections.py  database.py  display.py  dream.py  embedding.py  export.py  feedback.py  focus.py  fsrs.py  gdpr.py  graph.py  identity.py  importance.py  memory_ops.py  meta_learning.py  modes.py  narrative.py  passport.py  passport_w3c.py  patterns.py  ppr.py  procedures.py  reasoning.py  relations.py  runs.py  server.py  snapshots.py  ssl_finetune.py  sync.py  temporal.py  (+3 more)
scripts/: README.md  install.sh  integrate_phases.py  setup-embedding-model.sh
skills/memory/: SKILL.md
tests/: README.md  test_access_control.py  test_access_integration.py  test_basic.sh  test_beliefs.py  test_beliefs_extended.py  test_circus_sync.py  test_claude_mem_features.py  test_cli_advanced.py  test_cli_graph.py  test_cli_integration.py  test_config.py  test_content_hash.py  test_display.py  test_embedding_sanitize.py  test_feedback.py  test_focus.py  test_identity.py  test_integration_scavenge.py  test_lifecycle.py  test_meta_learning.py  test_modes.py  test_narrative.py  test_passport_w3c.py  test_reasoning.py  test_reasoning_boost.py  test_reasoning_display.py  test_runs.py  test_tiers.py  test_timeline.py  test_token_economics.py  test_validation.py
