[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-iq"
version = "5.7.0"
description = "Persistent context system for AI coding assistants"
authors = [
    {name = "Kobus Wentzel", email = "kobie@pop.co.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "ai", "memory", "context", "sqlite", "rag", "semantic-search",
    "knowledge-graph", "llm", "claude", "coding-assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]

dependencies = []

[project.optional-dependencies]
full = [
    "numpy>=1.21.0",
    "onnxruntime>=1.14.0",
    "tokenizers>=0.13.0",
    "sqlite-vec>=0.1.0",
    "huggingface-hub>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/kobie3717/ai-iq"
Repository = "https://github.com/kobie3717/ai-iq"
Issues = "https://github.com/kobie3717/ai-iq/issues"
Discord = "https://discord.gg/Y2jCXNGgE"

[project.scripts]
memory-tool = "memory_tool.cli:main"

[tool.setuptools]
packages = ["memory_tool"]

[tool.setuptools.package-data]
memory_tool = ["py.typed"]

[tool.setuptools.data-files]
"share/ai-iq/hooks/claude-code" = [
    "hooks/claude-code/CLAUDE.md.example",
    "hooks/claude-code/README.md",
    "hooks/claude-code/daily-maintenance.sh",
    "hooks/claude-code/error-hook.sh",
    "hooks/claude-code/session-hook.sh",
    "hooks/claude-code/settings.json.example",
]
