[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-iq"
version = "5.11.1"
description = "Self-hosted AI agent memory in one pip install. Graph memory, conflict detection, semantic search — free, no servers required. Mem0 and Zep alternative."
authors = [
    {name = "Kobus Wentzel", email = "kobie@pop.co.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ai", "memory", "agent-memory", "ai-agent", "long-term-memory",
    "graph-memory", "vector-memory", "sqlite", "rag", "semantic-search",
    "knowledge-graph", "llm", "claude", "openai", "self-hosted",
    "mem0-alternative", "zep-alternative", "persistent-memory",
    "ai-memory", "python-memory", "llm-memory", "agent", "chatbot-memory",
    "conflict-detection", "coding-assistant", "context-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "dateparser>=1.1.0",
]

[project.optional-dependencies]
full = [
    "numpy>=1.21.0",
    "onnxruntime>=1.14.0",
    "tokenizers>=0.13.0",
    "sqlite-vec>=0.1.0",
    "huggingface-hub>=0.14.0",
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pylint>=3.0",
]

[project.urls]
Homepage = "https://github.com/kobie3717/ai-iq"
Repository = "https://github.com/kobie3717/ai-iq"
Issues = "https://github.com/kobie3717/ai-iq/issues"
Discord = "https://discord.gg/Y2jCXNGgE"

[project.scripts]
memory-tool = "memory_tool.cli:main"

[tool.setuptools]
packages = ["memory_tool"]
py-modules = ["ai_iq"]

[tool.setuptools.package-data]
memory_tool = ["py.typed"]

[tool.setuptools.data-files]
"share/ai-iq/hooks/claude-code" = [
    "hooks/claude-code/CLAUDE.md.example",
    "hooks/claude-code/README.md",
    "hooks/claude-code/daily-maintenance.sh",
    "hooks/claude-code/error-hook.sh",
    "hooks/claude-code/session-hook.sh",
    "hooks/claude-code/settings.json.example",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false  # Start permissive, tighten later

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme/todo
    "C0301",  # line-too-long
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 120
